GNOME Bugzilla – Bug 665845
operator rendering code does not set font weight to normal.
Last modified: 2011-12-10 13:56:24 UTC
lsm_mathml_view_update_layout_for_operator() does not set weight, while lsm_mathml_view_update_layout_for_text() does. So, an operator is always rendered using the weight of the preceding text. For example: <mi mathvariant="bold">r</mi> <mo>≡</mo> In the case above, ≡ operator becomes bold. lsm_mathml_view_update_layout_for_operator() should explicitly call pango_font_description_set_weight (font_description, PANGO_WEIGHT_NORMAL) .
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.