mathml_view: explicitely set weight for show_operator.

Fix https://bugzilla.gnome.org/show_bug.cgi?id=665845